fix(graphql/ingest): Add back filtering of execution requests by ingestion source (#7997)