@@ -5,8 +5,6 @@ import static com.linkedin.datahub.graphql.resolvers.ingest.IngestTestUtils.*;
 import static org.mockito.ArgumentMatchers.*;
 import static org.testng.Assert.*;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableSet;
 import com.linkedin.common.urn.Urn;
 import com.linkedin.datahub.graphql.QueryContext;
 import com.linkedin.datahub.graphql.generated.EntityType;
@@ -22,6 +20,7 @@ import com.linkedin.r2.RemoteInvocationException;
 import graphql.schema.DataFetchingEnvironment;
 import java.util.Collections;
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Stream;
 import javax.annotation.Nullable;
 import org.mockito.Mockito;
@@ -37,7 +36,7 @@ public class ListExecutionRequestsResolverTest {
   @Test
   public void testGetSuccess() throws Exception {
     // Create resolver
-    EntityClient mockClient = getTestEntityClient(null, false);
+    EntityClient mockClient = getTestEntityClient(null);
 
     // Mock search response
     Mockito.when(
@@ -56,7 +55,7 @@ public class ListExecutionRequestsResolverTest {
                 .setNumEntities(1)
                 .setEntities(
                     new SearchEntityArray(
-                        ImmutableSet.of(
+                        Set.of(
                             new SearchEntity()
                                 .setEntity(Urn.createFromString(TEST_EXECUTION_REQUEST_URN))))));
 
@@ -83,7 +82,7 @@ public class ListExecutionRequestsResolverTest {
   @Test
   public void testGetEntityClientException() throws Exception {
     // Create resolver
-    EntityClient mockClient = getTestEntityClient(null, false);
+    EntityClient mockClient = getTestEntityClient(null);
     Mockito.doThrow(RemoteInvocationException.class)
         .when(mockClient)
         .search(
@@ -102,7 +101,7 @@ public class ListExecutionRequestsResolverTest {
 
   @Test
   public void testGetWithCustomQuery() throws Exception {
-    EntityClient mockClient = getTestEntityClient(null, false);
+    EntityClient mockClient = getTestEntityClient(null);
 
     ListExecutionRequestsInput customInput =
         new ListExecutionRequestsInput(0, 20, "custom-query", null, null, null);
@@ -140,8 +139,7 @@ public class ListExecutionRequestsResolverTest {
     EntityClient mockClient =
         getTestEntityClient(
             new FacetFilterInput(
-                "sourceType", null, ImmutableList.of("SYSTEM"), false, FilterOperator.EQUAL),
-            false);
+                "sourceType", null, List.of("SYSTEM"), false, FilterOperator.EQUAL));
 
     ListExecutionRequestsInput inputWithSystemSourcesOnly =
         new ListExecutionRequestsInput(0, 20, "*", List.of(), null, true);
@@ -162,8 +160,7 @@ public class ListExecutionRequestsResolverTest {
     EntityClient mockClient =
         getTestEntityClient(
             new FacetFilterInput(
-                "sourceType", null, ImmutableList.of("SYSTEM"), false, FilterOperator.EQUAL),
-            true);
+                "sourceType", null, List.of("SYSTEM"), true, FilterOperator.EQUAL));
 
     ListExecutionRequestsInput inputWithSystemSourcesOnly =
         new ListExecutionRequestsInput(0, 20, "*", List.of(), null, false);
@@ -180,10 +177,80 @@ public class ListExecutionRequestsResolverTest {
   }
 
   @Test
-  public void testGetWithFilteringByAccessibleIngestionSourcesWhenNoPermissions() throws Exception {
+  public void testGetWithFilteringByAccessibleSystemIngestionSourcesWhenNoPermissions()
+      throws Exception {
+
+    EntityClient mockClient =
+        getTestEntityClient(
+            new FacetFilterInput(
+                "sourceType", null, List.of("SYSTEM"), false, FilterOperator.EQUAL));
+
+    ListExecutionRequestsInput inputWithSystemSourcesOnly =
+        new ListExecutionRequestsInput(0, 20, "*", List.of(), null, true);
+
+    DataFetchingEnvironment mockEnv = Mockito.mock(DataFetchingEnvironment.class);
+    QueryContext mockContext = getMockDenyContext();
+    Mockito.when(mockEnv.getArgument(Mockito.eq("input"))).thenReturn(inputWithSystemSourcesOnly);
+    Mockito.when(mockEnv.getContext()).thenReturn(mockContext);
+    ListExecutionRequestsResolver resolver = new ListExecutionRequestsResolver(mockClient);
+
+    var result = resolver.get(mockEnv).get();
+    assertEquals(result.getExecutionRequests().size(), 0);
+  }
+
+  @Test
+  public void testMultiPageIngestionSourceFetching() throws Exception {
     EntityClient mockClient = Mockito.mock(EntityClient.class);
 
-    // When systemSources is null, no filter is added
+    // First page of ingestion sources - return full page of 1000 to trigger pagination
+    SearchEntityArray firstPageEntities = new SearchEntityArray();
+    for (int i = 1; i <= 1000; i++) {
+      firstPageEntities.add(
+          new SearchEntity()
+              .setEntity(Urn.createFromString("urn:li:dataHubIngestionSource:id-" + i)));
+    }
+
+    Mockito.when(
+            mockClient.search(
+                any(),
+                Mockito.eq(Constants.INGESTION_SOURCE_ENTITY_NAME),
+                Mockito.eq("*"),
+                Mockito.any(),
+                Mockito.any(),
+                Mockito.eq(0),
+                Mockito.eq(1000)))
+        .thenReturn(
+            new SearchResult()
+                .setFrom(0)
+                .setPageSize(1000)
+                .setNumEntities(1500)
+                .setEntities(firstPageEntities));
+
+    // Second page of ingestion sources - return partial page to stop pagination
+    SearchEntityArray secondPageEntities = new SearchEntityArray();
+    for (int i = 1001; i <= 1500; i++) {
+      secondPageEntities.add(
+          new SearchEntity()
+              .setEntity(Urn.createFromString("urn:li:dataHubIngestionSource:id-" + i)));
+    }
+
+    Mockito.when(
+            mockClient.search(
+                any(),
+                Mockito.eq(Constants.INGESTION_SOURCE_ENTITY_NAME),
+                Mockito.eq("*"),
+                Mockito.any(),
+                Mockito.any(),
+                Mockito.eq(1000),
+                Mockito.eq(1000)))
+        .thenReturn(
+            new SearchResult()
+                .setFrom(1000)
+                .setPageSize(500)
+                .setNumEntities(1500)
+                .setEntities(secondPageEntities));
+
+    // Mock execution request search with all ingestion sources in filter
     Mockito.when(
             mockClient.search(
                 any(),
@@ -200,44 +267,179 @@ public class ListExecutionRequestsResolverTest {
                 .setNumEntities(0)
                 .setEntities(new SearchEntityArray()));
 
-    ListExecutionRequestsInput inputWithSystemSourcesOnly =
-        new ListExecutionRequestsInput(0, 20, "*", List.of(), null, null);
+    ListExecutionRequestsResolver resolver = new ListExecutionRequestsResolver(mockClient);
 
     DataFetchingEnvironment mockEnv = Mockito.mock(DataFetchingEnvironment.class);
-    QueryContext mockContext = getMockDenyContext();
-    Mockito.when(mockEnv.getArgument(Mockito.eq("input"))).thenReturn(inputWithSystemSourcesOnly);
+    QueryContext mockContext = getMockAllowContext();
+    Mockito.when(mockEnv.getArgument(Mockito.eq("input"))).thenReturn(TEST_INPUT);
     Mockito.when(mockEnv.getContext()).thenReturn(mockContext);
-    ListExecutionRequestsResolver resolver = new ListExecutionRequestsResolver(mockClient);
 
     var result = resolver.get(mockEnv).get();
     assertEquals(result.getExecutionRequests().size(), 0);
+
+    // Verify both pages were fetched
+    Mockito.verify(mockClient, Mockito.times(1))
+        .search(
+            any(),
+            Mockito.eq(Constants.INGESTION_SOURCE_ENTITY_NAME),
+            Mockito.eq("*"),
+            Mockito.any(),
+            Mockito.any(),
+            Mockito.eq(0),
+            Mockito.eq(1000));
+
+    Mockito.verify(mockClient, Mockito.times(1))
+        .search(
+            any(),
+            Mockito.eq(Constants.INGESTION_SOURCE_ENTITY_NAME),
+            Mockito.eq("*"),
+            Mockito.any(),
+            Mockito.any(),
+            Mockito.eq(1000),
+            Mockito.eq(1000));
   }
 
   @Test
-  public void testGetWithFilteringByAccessibleSystemIngestionSourcesWhenNoPermissions()
-      throws Exception {
+  public void testFallbackWithoutIngestionSourceFilterWhenFilterTooLarge() throws Exception {
+    EntityClient mockClient = Mockito.mock(EntityClient.class);
+    Urn sourceUrn = Urn.createFromString("urn:li:dataHubIngestionSource:id-1");
+    Urn executionRequestUrn = Urn.createFromString(TEST_EXECUTION_REQUEST_URN);
 
-    EntityClient mockClient =
-        getTestEntityClient(
-            new FacetFilterInput(
-                "sourceType", null, ImmutableList.of("SYSTEM"), false, FilterOperator.EQUAL),
-            false);
+    // Mock ingestion source search
+    Mockito.when(
+            mockClient.search(
+                any(),
+                Mockito.eq(Constants.INGESTION_SOURCE_ENTITY_NAME),
+                Mockito.eq("*"),
+                Mockito.any(),
+                Mockito.any(),
+                Mockito.eq(0),
+                Mockito.eq(1000)))
+        .thenReturn(
+            new SearchResult()
+                .setFrom(0)
+                .setPageSize(1)
+                .setNumEntities(1)
+                .setEntities(
+                    new SearchEntityArray(Set.of(new SearchEntity().setEntity(sourceUrn)))));
 
-    ListExecutionRequestsInput inputWithSystemSourcesOnly =
-        new ListExecutionRequestsInput(0, 20, "*", List.of(), null, true);
+    // First attempt with ingestion source filter fails (e.g., filter too large)
+    Mockito.when(
+            mockClient.search(
+                any(),
+                Mockito.eq(Constants.EXECUTION_REQUEST_ENTITY_NAME),
+                Mockito.eq("*"),
+                argThat(
+                    filter ->
+                        filter != null
+                            && filter.getOr() != null
+                            && !filter.getOr().isEmpty()
+                            && !filter.getOr().get(0).getAnd().isEmpty()
+                            && filter
+                                .getOr()
+                                .get(0)
+                                .getAnd()
+                                .get(0)
+                                .getField()
+                                .equals("ingestionSource")),
+                Mockito.any(),
+                Mockito.eq(0),
+                Mockito.eq(20)))
+        .thenThrow(new RuntimeException("Request too large"));
 
-    DataFetchingEnvironment mockEnv = Mockito.mock(DataFetchingEnvironment.class);
-    QueryContext mockContext = getMockDenyContext();
-    Mockito.when(mockEnv.getArgument(Mockito.eq("input"))).thenReturn(inputWithSystemSourcesOnly);
-    Mockito.when(mockEnv.getContext()).thenReturn(mockContext);
+    // Second attempt without ingestion source filter succeeds
+    SearchEntityArray executionRequestEntities = new SearchEntityArray();
+    executionRequestEntities.add(new SearchEntity().setEntity(executionRequestUrn));
+
+    Mockito.when(
+            mockClient.search(
+                any(),
+                Mockito.eq(Constants.EXECUTION_REQUEST_ENTITY_NAME),
+                Mockito.eq("*"),
+                argThat(
+                    filter ->
+                        filter == null
+                            || filter.getOr() == null
+                            || filter.getOr().isEmpty()
+                            || filter.getOr().get(0).getAnd().isEmpty()
+                            || !filter
+                                .getOr()
+                                .get(0)
+                                .getAnd()
+                                .get(0)
+                                .getField()
+                                .equals("ingestionSource")),
+                Mockito.any(),
+                Mockito.eq(0),
+                Mockito.eq(20)))
+        .thenReturn(
+            new SearchResult()
+                .setFrom(0)
+                .setPageSize(1)
+                .setNumEntities(1)
+                .setEntities(executionRequestEntities));
+
     ListExecutionRequestsResolver resolver = new ListExecutionRequestsResolver(mockClient);
 
+    DataFetchingEnvironment mockEnv = Mockito.mock(DataFetchingEnvironment.class);
+    QueryContext mockContext = getMockAllowContext();
+    Mockito.when(mockEnv.getArgument(Mockito.eq("input"))).thenReturn(TEST_INPUT);
+    Mockito.when(mockEnv.getContext()).thenReturn(mockContext);
+
     var result = resolver.get(mockEnv).get();
-    assertEquals(result.getExecutionRequests().size(), 0);
+
+    // Verify fallback without ingestion source filter worked
+    assertEquals(result.getExecutionRequests().size(), 1);
+    assertEquals(result.getExecutionRequests().get(0).getUrn(), TEST_EXECUTION_REQUEST_URN);
+
+    // Verify both search attempts were made
+    Mockito.verify(mockClient, Mockito.times(1))
+        .search(
+            any(),
+            Mockito.eq(Constants.EXECUTION_REQUEST_ENTITY_NAME),
+            Mockito.eq("*"),
+            argThat(
+                filter ->
+                    filter != null
+                        && filter.getOr() != null
+                        && !filter.getOr().isEmpty()
+                        && !filter.getOr().get(0).getAnd().isEmpty()
+                        && filter
+                            .getOr()
+                            .get(0)
+                            .getAnd()
+                            .get(0)
+                            .getField()
+                            .equals("ingestionSource")),
+            Mockito.any(),
+            Mockito.eq(0),
+            Mockito.eq(20));
+
+    Mockito.verify(mockClient, Mockito.times(1))
+        .search(
+            any(),
+            Mockito.eq(Constants.EXECUTION_REQUEST_ENTITY_NAME),
+            Mockito.eq("*"),
+            argThat(
+                filter ->
+                    filter == null
+                        || filter.getOr() == null
+                        || filter.getOr().isEmpty()
+                        || filter.getOr().get(0).getAnd().isEmpty()
+                        || !filter
+                            .getOr()
+                            .get(0)
+                            .getAnd()
+                            .get(0)
+                            .getField()
+                            .equals("ingestionSource")),
+            Mockito.any(),
+            Mockito.eq(0),
+            Mockito.eq(20));
   }
 
-  private EntityClient getTestEntityClient(
-      @Nullable FacetFilterInput ingestionSourceFilter, boolean negationFlag) throws Exception {
+  private EntityClient getTestEntityClient(@Nullable FacetFilterInput ingestionSourceFilter)
+      throws Exception {
     EntityClient mockClient = Mockito.mock(EntityClient.class);
 
     Mockito.when(
@@ -248,7 +450,7 @@ public class ListExecutionRequestsResolverTest {
                 Mockito.eq(
                     buildFilter(
                         ingestionSourceFilter != null
-                            ? Stream.of(ingestionSourceFilter).toList()
+                            ? List.of(ingestionSourceFilter)
                             : Collections.emptyList(),
                         Collections.emptyList())),
                 Mockito.any(),
@@ -257,11 +459,11 @@ public class ListExecutionRequestsResolverTest {
         .thenReturn(
             new SearchResult()
                 .setFrom(0)
-                .setPageSize(0)
-                .setNumEntities(0)
+                .setPageSize(1)
+                .setNumEntities(1)
                 .setEntities(
                     new SearchEntityArray(
-                        ImmutableSet.of(
+                        Set.of(
                             new SearchEntity()
                                 .setEntity(
                                     Urn.createFromString("urn:li:dataHubIngestionSource:id-1"))))));
@@ -277,11 +479,11 @@ public class ListExecutionRequestsResolverTest {
                                 new FacetFilterInput(
                                     "ingestionSource",
                                     null,
-                                    ImmutableList.of("urn:li:dataHubIngestionSource:id-1"),
-                                    negationFlag,
+                                    List.of("urn:li:dataHubIngestionSource:id-1"),
+                                    false,
                                     FilterOperator.EQUAL))
                             .toList(),
-                        Collections.emptyList())),
+                        List.of())),
                 Mockito.any(),
                 Mockito.eq(0),
                 Mockito.eq(20)))
